--- a/Web/Views/Shared/NewTheme _MainLayout.cshtml
+++ b/Web/Views/Shared/NewTheme _MainLayout.cshtml
@@ -53,6 +53,8 @@ Like: www.facebook.com/Eng.Biruk.Tilahun
         <link href="~/Content/assetss/admin/pages/css/tasks.css" rel="stylesheet" type="text/css"/>
         <!-- END PAGE STYLES -->
         <!-- BEGIN THEME STYLES -->
+        <link href="~/Content/assetss/global/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
+
         <link href="~/Content/assetss/global/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
         <link href="~/Content/assetss/global/css/plugins.css" rel="stylesheet" type="text/css"/>
         <link href="~/Content/assetss/admin/layout/css/layout.css" rel="stylesheet" type="text/css"/>
@@ -408,6 +410,8 @@ Like: www.facebook.com/Eng.Biruk.Tilahun
         <script src="~/Content/assetss/global/plugins/jquery.sparkline.min.js" type="text/javascript"></script>-->
         <!-- END PAGE LEVEL PLUGINS -->
         <!-- BEGIN PAGE LEVEL SCRIPTS -->
+        <script src="~/Content/assetss/global/plugins/bootstrap-toastr/toastr.min.js"></script>
+
         <script src="~/Content/assetss/global/scripts/metronic.js" type="text/javascript"></script>
         <script src="~/Content/assetss/admin/layout/scripts/layout.js" type="text/javascript"></script>
         <script src="~/Content/assetss/admin/layout/scripts/quick-sidebar.js" type="text/javascript"></script>
