--- a/Web/Areas/Logistics/Views/Swap/Edit.cshtml
+++ b/Web/Areas/Logistics/Views/Swap/Edit.cshtml
@@ -18,6 +18,7 @@
             @Html.HiddenFor(m => m.StatusID)
             @Html.HiddenFor(m => m.ShippingInstructionID)
             @Html.HiddenFor(m => m.CreatedDate)
+            @Html.HiddenFor(m => m.BusinessProcessID)
             <div class="form-horizontal">
                 <div class="row">
                     <div class="form-group col-sm-6">
