--- a/Web/Areas/EarlyWarning/Views/NeedAssessment/CreateNeedAssessment.cshtml
+++ b/Web/Areas/EarlyWarning/Views/NeedAssessment/CreateNeedAssessment.cshtml
@@ -5,38 +5,50 @@
 @model Cats.Models.NeedAssessment
 
 @{
+    //ViewBag.Title = Html.Translate("Add New Need Assessment");
+    //Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    //const string pageName = "EarlyWarning.NeedAssessment.CreateNeedAssessment";
     ViewBag.Title = Html.Translate("Add New Need Assessment");
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
-    const string pageName = "EarlyWarning.NeedAssessment.CreateNeedAssessment";
+    //int index = 0;
+    const string PAGE_NAME = "EarlyWarning.NeedAssessment.CreateNeedAssessment";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = @Html.Translate("Add Need Assessment");
+    ViewBag.PageTitleDescription = "";
 }
 
-@section Title
-{
-@Html.Translate("Add Need Assessment") 
-}
-
-@section PageTitle
-{
-    <h1 class="hdr-blck big col-md-6">@Html.Translate("Add Need Assessment") </h1>
-}
 
 <div class="row">
     @Html.Partial("_NeedAssessmentMainLeftBar")
-    <div class="col-md-10  col-sm-9">
-        @using (Html.BeginForm("CreateNeedAssessment", "NeedAssessment", FormMethod.Post, new { id = "frm_add_region" }))
-        {
-            @Html.ValidationSummary(true)
-            <div class="box box-primary">
-                <div class="box-body ">
 
-                    <div class="col-md-6 col-sm-6 form-horizontal">
+    <div class="col-md-9  col-sm-9">
+
+        @using (Html.BeginForm("CreateNeedAssessment", "NeedAssessment", FormMethod.Post, new { id = "frm_add_region", @class = "form-horizontal" }))
+            {
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption font-green-sharp">
+                        <i class="icon-list font-green-sharp"></i>
+                        <span class="caption-subject bold uppercase"> @Html.Translate("Fill out the details")</span>
+                    </div>
+                    <div class="tools">
+                        <a href="#" class="collapse" data-original-title="" title=""></a>
+                    </div>
+                    <div class="actions">
+                        <button class="btn green" data-buttontype="btn_save" type="submit" data-submittedform="frm_add_region"><i class="fa fa-save"></i> @Html.Translate("Save") </button>
+                        <a href="@Url.Action("Index", "NeedAssessment")" class="btn red" data-buttontype="btn_cancel" type="submit" data-submittedform="frm_add_region"><i class="fa fa-times-circle"></i> @Html.Translate("Cancel") </a>
+                        @*<a class="btn btn-icon-only btn-default fullscreen"></a>*@
+                    </div>
+                </div>
+                <div class="portlet-body row">
+                    @Html.ValidationSummary(true)
+                    <div class="col-md-6 col-sm-6">
 
                         <div class="form-group">
                             <div class="col-sm-4 control-label">
                                 @Html.LabelFor(m => m.Plan.PlanName, Html.Translate("Plan"))
                             </div>
                             <div class="col-sm-8">
-                                @Html.TextBoxFor(m => m.Plan.PlanName, new { @class = " form-control" })
+                                @Html.TextBoxFor(m => m.Plan.PlanName, new {@class = " form-control"})
                                 @Html.ValidationMessageFor(m => m.Plan.PlanName)
                             </div>
                         </div>
@@ -47,7 +59,7 @@
                                 @Html.LabelFor(m => m.Season, Html.Translate("Season"))
                             </div>
                             <div class="col-sm-8">
-                                @Html.DropDownList("SeasonID", ViewBag.Season as SelectList, new { id = "Season", @class = "form-control" })
+                                @Html.DropDownList("SeasonID", ViewBag.Season as SelectList, new {id = "Season", @class = "form-control"})
                                 @Html.ValidationMessageFor(model => model.Season)
                             </div>
                         </div>
@@ -58,7 +70,7 @@
                                 @Html.Label(Translator.Translate("Assessment Type"))
                             </div>
                             <div class="col-sm-8">
-                                @Html.DropDownList("TypeOfNeedID", ViewBag.TypeOfNeed as SelectList, new { id = "TypeOfNeed", @class = "form-control" })
+                                @Html.DropDownList("TypeOfNeedID", ViewBag.TypeOfNeed as SelectList, new {id = "TypeOfNeed", @class = "form-control"})
 
                                 @Html.ValidationMessageFor(model => model.TypeOfNeedAssessment1.TypeOfNeedAssessmentID)
                             </div>
@@ -67,26 +79,26 @@
 
 
                     </div>
-                    <div class="col-md-6 col-sm-6 form-horizontal">
+                    <div class="col-md-6 col-sm-6">
 
-                       @* <div class="form-group">
-                            <div class="col-sm-4 control-label">
-                                @Html.LabelFor(m => m.Region,@Html.Translate("Region"))
-                            </div>
-                            <div class="col-sm-8">
-                                @Html.DropDownList("RegionID", ViewBag.Regions as SelectList, new { id = "Region", @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.Region)
-                            </div>
+                        @* <div class="form-group">
+                                <div class="col-sm-4 control-label">
+                                    @Html.LabelFor(m => m.Region,@Html.Translate("Region"))
+                                </div>
+                                <div class="col-sm-8">
+                                    @Html.DropDownList("RegionID", ViewBag.Regions as SelectList, new { id = "Region", @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.Region)
+                                </div>
 
-                        </div>*@
+                            </div>*@
 
 
                         <div class="form-group">
                             <div class="col-sm-4 control-label">
-                                @Html.Label(Translator.Translate("Assessment From"), new { @class = "cats-date-pref" })
+                                @Html.Label(Translator.Translate("Assessment From"), new {@class = "cats-date-pref"})
                             </div>
-                            <div class="col-sm-8">
-                                @Html.TextBoxFor(m => m.Plan.StartDate, new { @class = "form-control cats-datepicker2" })
+                            <div class="col-sm-5">
+                                @Html.TextBoxFor(m => m.Plan.StartDate, new {@class = "form-control cats-datepicker2"})
                                 @Html.ValidationMessageFor(m => m.Plan.StartDate)
                             </div>
                         </div>
@@ -97,26 +109,39 @@
 
                                 @Html.LabelFor(m => m.Plan.Duration, Translator.Translate("Duraton"))
                             </div>
-                            <div class="col-sm-8">
-                                @Html.TextBoxFor(m => m.Plan.Duration, new { @class = " form-control" })
-                                @Html.ValidationMessageFor(m => m.Plan.Duration)
-                                <a id="btnDateinterval">View Date Interval</a>
+                            <div class="col-sm-5">
+                                @Html.TextBoxFor(m => m.Plan.Duration, new {@class = "form-control"})
+                                <span class="help-block">@Html.ValidationMessageFor(m => m.Plan.Duration)</span>
+                                <span class="input-group-btn" id="btnDateinterval">
+                                    <button class="btn default" type="button"><i class="fa fa-arrows-h"></i> @Html.Translate("View Date Interval")</button>
+                                </span>
+                                
                             </div>
-
+                            
+                            @*<div class="col-sm-5">
+                                
+                            </div>*@
+                            
                         </div>
                     </div>
 
                 </div>
-                <div class="box-footer text-center">
-                    <button class="btn btn-primary" data-buttontype="btn_save" type="submit" data-submittedform="frm_add_region"><span class="fa fa-save"></span>@Html.Translate("Save") </button>
-                    <a class="btn  btn-default"  data-buttontype="btn_cancel"  href="@Url.Action("Index", "NeedAssessment")"><span class="fa fa-lg fa-times-circle"></span> @Html.Translate("Cancel"))</a>
-                </div>
+                @*<div class="modal-footer">
+                        <button class="btn btn-primary" data-buttontype="btn_save" type="submit" data-submittedform="frm_add_region"><span class="fa fa-save"></span>@Html.Translate("Save") </button>
+                        <a class="btn  btn-default" data-buttontype="btn_cancel" href="@Url.Action("Index", "NeedAssessment")"><span class="fa fa-lg fa-times-circle"></span> @Html.Translate("Cancel"))</a>
+                    </div>*@
+
             </div>
-   
-          }
+        }
     </div>
-</div>
+
+
+
+
+
 <div id="cats-modal"></div>
+<div class="modal fade" tabindex="-1" aria-hidden="true" id="viewIntervalModal">
+</div>
 <script type="text/javascript">
     $(function () {
 
@@ -136,14 +161,18 @@
                  var fullDate = startDate.getMonth() + 1 + '/' + startDate.getDate() + '/' + startDate.getFullYear();
                  var url = '@Url.Action("DateInterval", "HRD")?duration=' + duration + '&startDate=' + fullDate;
                  var $modal = $('<div class="modal" id="cats-modal"><div class="modal-body"></div></div>');
-                 console.log(url);
-                 $('body').append($modal);
-                 $modal.modal({ backdrop: 'static', keyboard: false });
-                 $modal.load(url);
+                 //console.log(url);
+                 //$('body').append($modal);
+                 //$modal.modal({ backdrop: 'static', keyboard: false });
+                 //$modal.load(url);
+                 $.get(url, function(data) {
+                     $("#viewIntervalModal").html(data);
+                     $("#viewIntervalModal").modal();
+                 });
              }
            );
 
-    });
+    }); 
 </script>
 
 <div id='dialogDiv' class='modal hide fade in' style="width: 620px; margin-right: 10px">
