--- a/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
+++ b/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
@@ -6,6 +6,21 @@
 @{
     ViewBag.Title = Html.Translate("Receipt Allocations");
 }
+
+<style>
+    .action-link {
+        display: none;
+    }
+
+    .assign-code3 {
+        display: block;
+    }
+
+    .k-grid td {
+        overflow: visible;
+    }
+</style>
+
 @{
     int allocationType = ViewBag.CommoditySourceType;
     string quanityColumnHeader = "MT";
@@ -38,10 +53,10 @@
         columns.Bound(dis => dis.CommodityName).Title(Html.Translate("Commodity")).Filterable(true);
         columns.Bound(dis => dis.SINumber).Title(Html.Translate("SINumber")).Filterable(true);
         columns.Bound(dis => dis.ProjectNumber).Title(Html.Translate("Project Code")).Filterable(true);
-       //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
-        columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new {align = "right"});
+        //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
+        columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
         //columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
-        columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new {align = "right"});
+        columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
         columns.Bound(dis => dis.RemainingBalanceInMT).ClientTemplate(
     "# if (RemainingBalanceInMT < 0) { #" +
             "#: RemainingBalanceInMT * -1 #" + "  <span style='font-weight: bold;'>  (over received) </span>" +
@@ -50,17 +65,37 @@
             "# } #"
             );
         //columns.Bound(dis => dis.RemainingBalanceInMT).Visible(false).Title(Html.Translate("Remaining in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(RemainingBalanceInMT)#");
-        if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation) )
+        if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation))
         {
             columns.Bound(dis => dis.ReceiptAllocationID).Title("").ClientTemplate("<a href='" +
-                                                                                   @Url.Action("Create", "ReceiveNew", new {@ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType}) +
+                                                                                   @Url.Action("Create", "ReceiveNew", new { @ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType }) +
                                                                                    "'>Recieve  </a> &nbsp; " +
                                                                                    "<a  class='close_#=IsClosed#' href='javascript:ClosePlanByID(\"#=ReceiptAllocationID#\"," + allocationType + ")'>Close</a>"
                 );
         }
+
+        columns.Template(
+            @<text>
+               
+                <div class='btn-group'>
+                    <button type='button' id='workflow-#=RequisitionId#' class='btn btn-default dropdown-toggle btn-xs green-stripe' data-toggle='dropdown'>
+                        <i class='fa fa-ellipsis-horizontal'>
+                        </i>Workflow<i class='fa fa-angle-down'></i>
+                    </button>
+
+                    <ul class='dropdown-menu pull-right' style='overflow: visible;'>
+
+                        <li class="divider"></li>
+                        <li class='edit_button'>
+                            <a href="javascript:workflow_history(@item.BusinessProcessID)"> History </a>
+                        </li>
+                    </ul>
+                </div>
+            </text>
+                              ).Title(@Html.Translate("Action")).Width("200px");
     })
 
-        )
+)
 
 <script id="template_receive" type="text/kendo-tmpl">
     
@@ -145,5 +180,13 @@
         if (document.getElementById('FilterGRN').value !== "") this.expandRow(this.tbody.find("tr.k-master-row").first());
     }
 
-
+    function workflow_history(BusinessProcessID) {
+        $('#modalHistory').modal();
+        $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
+        $.post(history_link + BusinessProcessID, {},
+            function (data) {
+                $("#modalHistoryBody").html(data);
+            }
+        );
+    }
 </script>
