CATS-1389: _promotWorkflow - partial modal popup has been updeted

--- a/Web/Views/Shared/_promotWorkflow.cshtml
+++ b/Web/Views/Shared/_promotWorkflow.cshtml
@@ -3,7 +3,7 @@
 @using LanguageHelpers.Localization
 @{
     var user = (UserIdentity)HttpContext.Current.User.Identity;
-    var TargetController=ViewBag.TargetController;//?"RegionalPSNPPlan";
+    var TargetController = ViewBag.TargetController;//?"RegionalPSNPPlan";
 }
 <div id="modalPromotion" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
     <div class="modal-dialog">
@@ -16,9 +16,9 @@
                 <div class="modal-body">
                     @*<form  class="form-horizontal" action="@Url.Action("Promote", TargetController)" method="post">*@
                     @if (ViewBag.TransporterID != null)
-                {
+                    {
                         <input type="text" id="transporterID" name="transporterID" style="display: none" value="@ViewBag.TransporterID" />
-                }
+                    }
 
 
                     <input type="hidden" name="ParentBusinessProcessID" id="ParentBusinessProcessID" class="input-xlarge" value="" />
@@ -47,10 +47,11 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">@Html.Translate("Attachment File")</label>
                         <div class="col-md-9">
-                            <input type="file" name="AttachmentFile" class="form-control" />
+                            <input type="file" id="fileOpen" name="AttachmentFile" class="form-control" />
+                            <input type="button" onclick="onRemove()" id="clear" value="Clear"/>
                         </div>
                     </div>
-                    
+
 
                     @*</form>*@
                 </div>
@@ -64,8 +65,22 @@
     </div>
 </div>
 <script>
-    $("#modalPromotion").submit(function () {
+    $("#modalPromotion").submit(function() {
         $("#promotionFooter").html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
 
     });
+
+
+</script>
+
+<script type="text/javascript">
+    
+    function onRemove() {
+        
+        var fileOpen = document.getElementById("fileOpen");
+        var clone = fileOpen.cloneNode(true);
+
+        fileOpen.parentNode.replaceChild(clone, fileOpen);
+    }
+
 </script>
