--- a/Web/Areas/EarlyWarning/Views/HRD/ApprovedHRDs.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/ApprovedHRDs.cshtml
@@ -165,7 +165,12 @@ Plans
                                                             <a href="javascript:promot_workflow(@item.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@item.HRDID)" title="@actions.Name">@actions.Name</a>
                                                         </li>
                                                     }
-
+                                                    if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Approve_HRD) && actions.Name == "Revert")
+                                                    {
+                                                        <li class="edit_button">
+                                                            <a href="javascript:promot_workflow(@item.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@item.HRDID)" title="@actions.Name">@actions.Name</a>
+                                                        </li>
+                                                    }
                                                 }
                                                 <li class="divider"></li>
                                                 @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_HRD_Detail))
