CATS-V2-Hotfix: this update goes for _promotWorkflow.cshtml, which will remove a file that is attached

--- a/Web/Views/Shared/_promotWorkflow.cshtml
+++ b/Web/Views/Shared/_promotWorkflow.cshtml
@@ -47,7 +47,15 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">@Html.Translate("Attachment File")</label>
                         <div class="col-md-9">
-                            <input type="file" name="AttachmentFile" class="form-control" />
+
+                            <div class="col-md-7">
+
+                                <input type="file" id="fileOpen" name="AttachmentFile" class="form-control valid">
+
+                            </div>
+                            <div class="col-md-2 ">
+                                <input type="button" onclick="onRemove()" id="clear" value="Clear">
+                            </div>
                         </div>
                     </div>
                     
@@ -64,8 +72,20 @@
     </div>
 </div>
 <script>
-    $("#modalPromotion").submit(function () {
+    $("#modalPromotion").submit(function() {
         $("#promotionFooter").html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
 
     });
+</script>
+
+<script type="text/javascript">
+
+    function onRemove() {
+
+        var fileOpen = document.getElementById("fileOpen");
+        var clone = fileOpen.cloneNode(true);
+
+        fileOpen.parentNode.replaceChild(clone, fileOpen);
+    }
+
 </script>
