Moved workflow related files from d/t projects to one Service Project

--- a/Web/Areas/Procurement/Views/Transporter/Edit.cshtml
+++ b/Web/Areas/Procurement/Views/Transporter/Edit.cshtml
@@ -21,6 +21,7 @@
 }
 
 <div class="form-horizontal">
+    @Html.Hidden("BusinessProcessId",Model.BusinessProcessId);
     @using (Html.BeginForm("Edit", "Transporter", FormMethod.Post, new { id = "frm_edit_transporter" }))
     {
         @Html.ValidationSummary(true)
